--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -30,3 +30,42 @@ input {
     padding: 2px 2px 15px 2px;
   }
 }
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+
+img.loading {
+  position: relative;
+  background: linear-gradient(
+    90deg,
+    rgba(30, 30, 30, 0.9) 0%,
+    rgba(50, 50, 50, 0.9) 50%,
+    rgba(30, 30, 30, 0.9) 100%
+  );
+  background-size: 200% 100%;
+  animation: shimmer 2s infinite linear;
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+img.error {
+  position: relative;
+  background: rgba(30, 30, 30, 0.9);
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+img.loaded {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
