--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,12 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Neucha&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-  --accent-color: #6c5ce7;
-  --accent-hover: #5a4fcf;
-  --accent-light: #8a7ce8;
-  --accent-dark: #5548c4;
-  --accent-transparent: #6c5ce730;
-  --accent-semi-transparent: #6c5ce780;
+  --accent-color: #e50914;
+  --accent-hover: #b2070f;
+  --accent-light: #ff3d47;
+  --accent-dark: #a00610;
+  --accent-transparent: #e5091430;
+  --accent-semi-transparent: #e5091480;
 
   --secondary-color: #74b9ff;
   --secondary-hover: #0984e3;
